syntax = "proto3";
option go_package = "/proto";
enum PushErrorCode{
  OK = 0; // 成功
  UNKNOWN_ERROR = 1; // 未知错误
  INVALID_MESSAGE = 2; // 无效的消息
  SERIALIZATION_ERROR = 3; // 序列化错误
  DESERIALIZATION_ERROR = 4; // 反序列化错误
  SOCKET_ERROR = 5; // Socket 错误
  MESSAGE_TOO_LARGE = 6; // 消息太大
}

//push的消息应该有明确分类，聊天消息，好友申请等，如果是聊天消息，那么还应该有消息类型，是聊天的命令消息，还是聊天的内容消息
message PushMessageRequest{
  string content = 1;
  string user_name = 2;
  string receiver = 3;
}

message PushMessageResponse{
  PushErrorCode error_code = 1;
  string error_message = 2;
  string content = 3;
}

service PushService{
  rpc PushMessage(PushMessageRequest) returns (PushMessageResponse);
}